--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
+  "homepage": "http://DavidSabag.github.io/MemoryGame",
   "name": "memory-game",
   "version": "0.0.0",
   "scripts": {
+    "predeploy":"ng build",
+    "deploy":"gh-pages -d build",
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build"
@@ -25,6 +28,7 @@
     "@angular/cli": "~11.2.8",
     "@angular/compiler-cli": "~11.2.9",
     "@types/node": "^12.11.1",
+    "gh-pages": "^3.1.0",
     "typescript": "~4.1.5"
   }
 }
