--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "scripts": {
     "predeploy":"ng build",
-    "deploy":"gh-pages -d build",
+    "deploy":"gh-pages -d dist",
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build"
