--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://DavidSabag.github.io/MemoryGame",
+  "homepage": "https://DavidSabag.github.io/MemoryGame",
   "name": "memory-game",
   "version": "0.0.0",
   "scripts": {
