--- a/package.json
+++ b/package.json
@@ -3,8 +3,6 @@
   "name": "memory-game",
   "version": "0.0.0",
   "scripts": {
-    "predeploy":"ng build",
-    "deploy":"gh-pages -d dist",
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build"
@@ -28,7 +26,7 @@
     "@angular/cli": "~11.2.8",
     "@angular/compiler-cli": "~11.2.9",
     "@types/node": "^12.11.1",
-    "gh-pages": "^3.1.0",
+    "angular-cli-ghpages": "^1.0.0-rc.1",
     "typescript": "~4.1.5"
   }
 }
